[Semester 2] Commit_3 Materi 1

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Materi2"></activity>
+        <activity android:name=".Materi3"></activity>
+        <activity android:name=".TargetActivity"></activity>
     </application>
 
 </manifest>
