--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.s2_materi1">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.S2_Materi1">
-        <activity android:name=".MainActivity"></activity>
         <activity android:name=".Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,9 +18,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Materi2"></activity>
-        <activity android:name=".Materi3"></activity>
-        <activity android:name=".TargetActivity"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".Materi2" />
+        <activity android:name=".Materi3" />
+        <activity android:name=".Materi4" />
+        <activity android:name=".Materi5" />
+        <activity android:name=".TargetActivity" />
+        <activity android:name=".EditNameActivity" />
     </application>
 
 </manifest>
